# primeiros-passos-python

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALL.md  PROGRESSO.md  README.md  aula01.py  exercicio01.py  exercicio03.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 3af69e33991b_add_prioridade_na_tarefa.py  5ee9df2b5439_add_descricao_na_categoria.py  f579fb0d6772_schema_inicial.py
fundamentos/: aula01.py  exercicio01.md  exercicio02.md  exercicio02.py  exercicio03.md  exercicio03.py  exercicio04.md  exercicio04.py  exercicio05.md  exercicio05.py  exercicio06.md  exercicio06.py  exercicio07.md  exercicio07.py  exercicio08.md  exercicio08.py  exercicio09.md  exercicio09.py  exercicio10.md  exercicio11.md  exercicio12.md  exercicio13.md  exercicio14.md  exercicio15.md  exercicio16.md  exercicio17.md  exercicio18.md  exercicio19.md  exercicio20.md  exercicio21.md  exercicio22.md  exercicio23.md  exercicio24.md
fundamentos/api/: config.py  database.py  main.py
fundamentos/api/routers/: __init__.py  categorias.py  tarefas.py  usuarios.py
fundamentos/banco/: __init__.py  conta.py  tipos.py
tests/: conftest.py  test_auth.py  test_categorias.py  test_exemplo.py  test_tarefas.py
