# ============================================================================
# pyproject.toml — o "package.json" do Python (metadados + deps + config das ferramentas)
# ============================================================================

# --- Metadados do projeto (igual ao topo do package.json) -------------------
[project]
name = "estudos"
version = "0.1.0"
description = "Projeto de estudos de Python (backend), vindo de JavaScript"
readme = "README.md"
requires-python = ">=3.13"
# Dependências de produção entram aqui (ex: "fastapi>=0.110"). Vazio por enquanto.
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.138.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.39",
]

# --- Dependências de desenvolvimento (igual ao devDependencies) -------------
# Ferramentas que só usamos para desenvolver, não para rodar em produção.
[dependency-groups]
dev = [
    "ruff>=0.15",      # linter + formatter
    "mypy>=1.13",      # type checker (nosso "tsc")
    "pytest>=8.0",     # framework de testes (nosso "jest")
    "pre-commit>=4.0", # roda checagens antes de cada commit (nosso "husky")
    "pytest-watcher>=0.6.3", # re-roda os testes ao salvar (nosso "jest --watch")
    "poethepoet>=0.47.0", # task runner: tasks em [tool.poe.tasks] (nosso "scripts")
]

# ============================================================================
# Config das ferramentas (cada [tool.xxx] é a config de uma ferramenta)
# ============================================================================

# --- Ruff: linter + formatter -----------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py313"
# Migrations sao geradas pelo Alembic (codigo de maquina) — nao linthamos elas.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (espaçamento, estilo da PEP 8)
    "W",   # pycodestyle warnings
    "F",   # pyflakes (variáveis não usadas, imports faltando, bugs reais)
    "I",   # isort (ordena imports)
    "N",   # pep8-naming (força snake_case)
    "UP",  # pyupgrade (sintaxe mais moderna)
    "B",   # flake8-bugbear (armadilhas comuns)
    "SIM", # flake8-simplify (simplificações)
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Nos materiais de estudo, liberamos coisas didáticas que num projeto real seriam avisos:
"fundamentos/*" = ["B018"] # permite "expressões soltas" para testar no REPL

[tool.ruff.format]
quote-style = "double"

# --- mypy: type checker (valida os type hints, como o TypeScript) -----------
[tool.mypy]
python_version = "3.13"
# Plugin do Pydantic: ensina o mypy que campos de BaseSettings vêm do ambiente,
# então `Settings()` sem argumentos é válido (não é "argumento faltando").
plugins = ["pydantic.mypy"]
# Modo gradual e amigável para quem está começando:
warn_return_any = true        # avisa se uma função retorna "Any" sem querer
warn_unused_ignores = true    # avisa se você tem um "# type: ignore" desnecessário
ignore_missing_imports = true # não reclama de libs sem type hints

# --- basedpyright: type checker do editor -----------------------------------
# O editor não lê o `pythonpath` do pytest, então repetimos a pasta da API aqui
# para ele resolver `from database import ...` e `from main import app`.
[tool.pyright]
extraPaths = ["fundamentos/api"]
# Migrations sao geradas pelo Alembic — suprime os avisos do checker nelas.
ignore = ["alembic/versions"]

# --- pytest: framework de testes --------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]        # onde procurar testes
python_files = ["test_*.py"] # nomes de arquivo que contam como teste
# A API usa imports "crus" (from database import ...), então adicionamos a pasta
# dela ao path para os testes conseguirem importar `main`, `database`, `routers`.
pythonpath = ["fundamentos/api"]
# Silencia 1 aviso de depreciação que vem de DENTRO do FastAPI/Starlette
# (não é do nosso código): o TestClient ainda usa o httpx atual.
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]

# --- poe: task runner (o "scripts" do package.json) -------------------------
# Rode com:  uv run poe <nome>   (ex.: uv run poe test)
[tool.poe.tasks]
dev     = "fastapi dev fundamentos/api/main.py"  # sobe a API em modo dev (reload)
test    = "pytest"                               # roda todos os testes
"test:v" = "pytest -v"                           # testes com nome de cada um
watch   = "ptw . -- -v"                          # re-roda os testes ao salvar
lint    = "ruff check ."                         # aponta problemas de lint
fix     = "ruff check . --fix"                   # corrige lint automático
fmt     = "ruff format ."                        # formata o código (≈ prettier)
types   = "mypy fundamentos"                     # checa os type hints (≈ tsc)
